// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overlay-true overlay prompts and changes 1`] = `"Unexpected var, use let or const instead."`;

exports[`overlay-true overlay prompts and changes 2`] = `"<PROJECT_ROOT>/temp/basic/src/main.ts:3:1"`;

exports[`overlay-true overlay prompts and changes 3`] = `
"
      
             1 | import { text } from './text'
    2 |
  > 3 | var hello = 'Hello'
      | ^^^^^^^^^^^^^^^^^^^
    4 |
    5 | const rootDom = document.querySelector('#root')! as HTMLElement
    6 | rootDom.innerHTML = hello + text
      
    "
`;

exports[`overlay-true overlay prompts and changes 4`] = `
"
      
             1 | import { text } from './text'
    2 |
  > 3 | var hello = 'Hello1'
      | ^^^^^^^^^^^^^^^^^^^^
    4 |
    5 | const rootDom = document.querySelector('#root')! as HTMLElement
    6 | rootDom.innerHTML = hello + text
      
    "
`;
